# Mocker

./: pyproject.toml  requirements.txt  vercel.json
src/: app.py  main.py
templates/: index.html
utils/: dictionary.py
