[tool.poetry]
name = "data-generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src" },
    { include = "utils" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
faker = "^33.1.0"
fastapi = {extras = ["standard"], version = "^0.115.6"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
